--- a/public/css/website.css
+++ b/public/css/website.css
@@ -1,55 +1,28 @@
 @font-face {
-    font-family: IranYekan;
-    src: url("../fonts/eot/iranyekanwebregularfanum.eot");
-    src: url("../fonts/eot/iranyekanwebregularfanum.eot?#iefix") format("embedded-opentype"),
-        url("../fonts/woff/iranyekanwebregularfanum.woff") format("woff"),
-        url("../fonts/ttf/iranyekanwebregularfanum.ttf") format("truetype");
+    font-family: Vazir;
+    src: url("../fonts/eot/Vazir-Regular.eot");
+    src: url("../fonts/eot/Vazir-Regular.eot?#iefix") format("embedded-opentype"),
+        url("../fonts/woff/Vazir-Regular.woff") format("woff"),
+        url("../fonts/ttf/Vazir-Regular.ttf") format("truetype");
     font-weight: normal;
 }
 
 @font-face {
-    font-family: IranYekan;
-    src: url("../fonts/eot/iranyekanwebboldfanum.eot");
-    src: url("../fonts/eot/iranyekanwebboldfanum.eot?#iefix") format("embedded-opentype"),
-        url("../fonts/woff/iranyekanwebboldfanum.woff") format("woff"),
-        url("../fonts/ttf/iranyekanwebboldfanum.ttf") format("truetype");
+    font-family: Vazir;
+    src: url("../fonts/eot/Vazir-Medium.eot");
+    src: url("../fonts/eot/Vazir-Medium.eot?#iefix") format("embedded-opentype"),
+        url("../fonts/woff/Vazir-Medium.woff") format("woff"),
+        url("../fonts/ttf/Vazir-Medium.ttf") format("truetype");
     font-weight: bold;
 }
 
 @font-face {
-    font-family: IranYekan;
-    src: url("../fonts/eot/iranyekanweblightfanum.eot");
-    src: url("../fonts/eot/iranyekanweblightfanum.eot?#iefix") format("embedded-opentype"),
-        url("../fonts/woff/iranyekanweblightfanum.woff") format("woff"),
-        url("../fonts/ttf/iranyekanweblightfanum.ttf") format("truetype");
+    font-family: Vazir;
+    src: url("../fonts/eot/Vazir-Light.eot");
+    src: url("../fonts/eot/Vazir-Light.eot?#iefix") format("embedded-opentype"),
+        url("../fonts/woff/Vazir-Light.woff") format("woff"),
+        url("../fonts/ttf/Vazir-Light.ttf") format("truetype");
     font-weight: 300;
-}
-
-@font-face {
-    font-family: IranYekan;
-    src: url("../fonts/eot/iranyekanwebmediumfanum.eot");
-    src: url("../fonts/eot/iranyekanwebmediumfanum.eot?#iefix") format("embedded-opentype"),
-        url("../fonts/woff/iranyekanwebmediumfanum.woff") format("woff"),
-        url("../fonts/ttf/iranyekanwebmediumfanum.ttf") format("truetype");
-    font-weight: 500;
-}
-
-@font-face {
-    font-family: IranYekan;
-    src: url("../fonts/eot/iranyekanwebthinfanum.eot");
-    src: url("../fonts/eot/iranyekanwebthinfanum.eot?#iefix") format("embedded-opentype"),
-        url("../fonts/woff/iranyekanwebthinfanum.woff") format("woff"),
-        url("../fonts/ttf/iranyekanwebthinfanum.ttf") format("truetype");
-    font-weight: 100;
-}
-
-@font-face {
-    font-family: IranYekan;
-    src: url("../fonts/eot/iranyekanwebblackfanum.eot");
-    src: url("../fonts/eot/iranyekanwebblackfanum.eot?#iefix") format("embedded-opentype"),
-        url("../fonts/woff/iranyekanwebblackfanum.woff") format("woff"),
-        url("../fonts/ttf/iranyekanwebblackfanum.ttf") format("truetype");
-    font-weight: 900;
 }
 
 :root {
@@ -93,7 +66,8 @@ body {
     flex-direction: column;
     padding-top: 3.6rem;
     color: #5a5a5a;
-    font-family: IranYekan;
+    font-family: Vazir;
+    font-weight: normal !important;
 }
 
 .service-cart {
@@ -117,6 +91,7 @@ body {
 
     .navbar-brand-mobile {
         display: block;
+        font-weight: bold;
     }
 
     .navbar-brand {
@@ -160,6 +135,7 @@ body {
 
     .navbar-brand {
         display: block;
+        font-weight: bold;
     }
 
     .navbar-brand {
@@ -420,11 +396,12 @@ footer a {
 .item-title {
     font-size: 0.9rem;
     padding: 10px 0px;
+    font-weight: bold;
 }
 
 .item-subtitle {
-    font-size: 0.8rem;
-    padding: 5px 0px;
+    font-size: 0.9rem;
+    padding: 10px 0px;
     color: var(--dark-grey);
 }
 
@@ -435,6 +412,7 @@ footer a {
 .page-title {
     font-size: 1.5rem;
     text-align: center;
+    font-weight: bold;
 }
 
 .article-info {
@@ -472,7 +450,7 @@ footer {
 /* #region Header Section */
 
 .header-main-menu {
-    font-size: 0.9rem;
+    font-size: 1rem;
 }
 
 .header-main-menu li:hover {
